# smartrep_iot

./: README.md  pyproject.toml
src/smartrep_iot/: __init__.py  adc.py  camera.py  config.py  main.py  mqtt_client.py  session_manager.py
src/smartrep_iot/pi1/: adc.py  ai_coach.py  config.py  fsr.py  led.py  main.py  mqtt_client.py  session_manager.py  tracker.py  workout_contract.py
src/smartrep_iot/pi2/: ai_coach.py  main,py  main.py  tracker.py
