[project]
name = "smartrep-iot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vicbien", email = "vicbien@zoneandco.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
smartrep-iot = "smartrep_iot:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
